# rustray

./: AGENTS.md  Cargo.toml  README.md
examples/: bouncing_spheres.rs  cornell_box.rs  monte_carlo.rs  next_week_scene.rs  pdf.rs
scenes/: bouncing_spheres.toml  cornell_box.toml  earth.toml  perlin_sphere.toml  quads.toml  simple_light.toml  uv_debug.toml
src/: core.rs  formats.rs  geometry.rs  lib.rs  main.rs  materials.rs  math.rs  primitives.rs  samplers.rs  stats.rs  textures.rs  traits.rs  types.rs  utils.rs
src/cameras/: basic.rs
src/core/: acceleration.rs  bbox.rs  bvh.rs  camera.rs  interval.rs  object.rs  ray.rs  render.rs  scene.rs  scene_file.rs  vec.rs  volume.rs  world.rs
src/formats/: ppm.rs
src/geometry/: instance.rs  primitives.rs  transform.rs
src/geometry/primitives/: cube.rs  quad.rs  sphere.rs
src/materials/: dielectric.rs  diffuse.rs  diffuse_light.rs  instance.rs  lambertian.rs  metallic.rs  mod.rs  specular.rs
src/math/: interval.rs  mat.rs  onb.rs  pdf.rs  perlin.rs  vec.rs
src/math/pdf/: cosine.rs  phase.rs  uniform.rs
src/primitives/: quad.rs  skybox.rs  sphere.rs
src/samplers/: monte_carlo.rs  sampleable.rs
src/stats/: charts.rs  tracker.rs
src/textures/: checker.rs  color.rs  noise.rs  uv.rs
src/traits/: hittable.rs  mod.rs  renderable.rs  sampleable.rs  scatterable.rs  texturable.rs
src/types/: camera.rs  mod.rs  ray.rs  scene.rs  skybox.rs  sphere.rs  vec.rs
src/utils/: perlin.rs  stats.rs
