[package]
name = "rustray"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.9"
rand = "0.9.2"
hdrhistogram = "7.5.4"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.8.19"
charming = { version = "0.6.0", features = ["ssr", "ssr-raster"] }
num_cpus = "1.17.0"
rayon = "1.11.0"
